# Chronos

./: package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/chrono-vault/: page.tsx
app/chrono-vault/_components/: AddFile.tsx  AddFileDialog.tsx  AddFolderDialog.tsx  ChronoVaultHeader.tsx  CombinedGrid.tsx  DeleteFolderDialog.tsx  EditFileDialog.tsx  EditFolderDialog.tsx  FolderContent.tsx  FolderDialogs.tsx  FolderGrid.tsx  FolderHeader.tsx  FolderNavigation.tsx  PDFThumbnail.tsx  Util.tsx
app/planning/: page.tsx
app/settings/: layout.tsx  page.tsx
app/workspace/: page.tsx
app/workspace/study/: page.tsx  (+1 more)
components/: datepicker.tsx
components/ui/: sidebar.tsx  tabs.tsx  titlebar-controls.tsx  weekly-calendar.tsx
hooks/: useTaskSystem.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: categories_commands.rs  config_commands.rs  file_commands.rs  folder_commands.rs  mod.rs  task_commands.rs  window_commands.rs
src-tauri/src/config/: config_manager.rs  mod.rs
src-tauri/src/db/: connection.rs  helpers_tests.rs  initialize.rs  mod.rs
src-tauri/src/models/: categories.rs  file.rs  folder.rs  task.rs
src-tauri/src/repository/: categories.rs  file.rs  folder.rs  mod.rs  task.rs
src-tauri/src/schema/: file.rs  folder.rs  mod.rs
src-tauri/src/services/: categories.rs  file.rs  folder.rs  mod.rs  task.rs
src-tauri/tests/: categories_test.rs
types/: Category.ts  DatabaseManager.ts  File.ts  Folder.ts  Task.ts
(+42 files in other folders)
