[package]
name = "Chronos"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
tokio = "1.44.2"
thiserror = "2.0.12"
anyhow = "1.0.98"
sqlx = { version = "0.8.5", default-features = false, features = ["sqlite", "runtime-tokio-native-tls", "chrono"] } 
chrono = { version = "0.4.40", features = ["serde"] }
dirs = "6.0.0"
tauri-plugin-dialog = "2"
diesel = { version = "2.1.6", features = ["sqlite"] }
mime_guess = "2.0.5"
tauri-plugin-shell = "2"
